discussion/kv_engine/177333/177333_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51748: Remove support for ClientOpcode::LastClosedCheckpoint

Related to the legacy and already removed CheckpointPersistence opcode.

Change-Id: If93e7d27749953b6e72c9b64caf4f8ef63d2ab4f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-11 09:27:57.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-07-11 09:36:25.000000000
Message: 
Patch Set 2: Code-Review-1

(1 comment)
Line:680, tests/testapp_serverless/metering_test.cc -> Shouldn't it just be renamed?

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-07-11 09:40:59.000000000
Message: 
Patch Set 2:

(1 comment)
Line:680, tests/testapp_serverless/metering_test.cc -> yeah sure, just an oversight here, that needs to be moved above to the "unsupported" set

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-11 09:44:44.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47734/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47734/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29213/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29213/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29213/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20815/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20815/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18071/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/protocol/mcbp/opcode_test.cc b/protocol/mcbp/opcode_test.cc
index 6b5417f74..5410a431a 100644
--- a/protocol/mcbp/opcode_test.cc
+++ b/protocol/mcbp/opcode_test.cc
@@ -127,7 +127,8 @@ const std::map&lt;cb::mcbp::ClientOpcode, std::string&gt; client_blueprint = {
          {ClientOpcode::GetLocked, &quot;GET_LOCKED&quot;},
          {ClientOpcode::UnlockKey, &quot;UNLOCK_KEY&quot;},
          {ClientOpcode::GetFailoverLog, &quot;GET_FAILOVER_LOG&quot;},
-         {ClientOpcode::LastClosedCheckpoint_Unsupported, &quot;LAST_CLOSED_CHECKPOINT&quot;},
+         {ClientOpcode::LastClosedCheckpoint_Unsupported,
+          &quot;LAST_CLOSED_CHECKPOINT&quot;},
          {ClientOpcode::ResetReplicationChain_Unsupported,
           &quot;RESET_REPLICATION_CHAIN&quot;},
          {ClientOpcode::DeregisterTapClient_Unsupported,

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18071/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18914/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:215:17: error: enumeration value "LastClosedCheckpoint_Unsupported" not handled in switch [clang-diagnostic-switch]
        switch (opcode) {
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18914/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:215:17:
error: enumeration value "LastClosedCheckpoint_Unsupported" not handled in switch [clang-diagnostic-switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18914/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8598/ : FAILURE

Compile error at [2022-07-11T09:39:18.933Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/metering_test.cc:215:17:
error: enumeration value "LastClosedCheckpoint_Unsupported" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8598/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21173/ : FAILURE

Compile error at [2022-07-11T09:39:04.533Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:215:16:
error: enumeration value ?LastClosedCheckpoint_Unsupported? not handled in switch [-Werror=switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21173/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21862/ : FAILURE

Compile error at [2022-07-11T09:43:09.429Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:215:17:
error: enumeration value "LastClosedCheckpoint_Unsupported" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21862/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20057/ : FAILURE

Compile error at [2022-07-11T09:39:30.082Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/metering_test.cc:215:17:
error: enumeration value "LastClosedCheckpoint_Unsupported" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20057/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8695/ : FAILURE

Compile error at [2022-07-11T09:35:36.739Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:215:16:
error: enumeration value ?LastClosedCheckpoint_Unsupported? not handled in switch [-Werror=switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8695/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40096/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-07-11 09:44:16.000000000
MISMATCHED INLINE COMMENT
Line:680, tests/testapp_serverless/metering_test.cc -> Done
----------------------------------------------------------------------------------------------------------------------
